@@ -4,6 +4,7 @@ import io.github.vzwingma.finances.budget.serverless.data.MockDataCategoriesOper
 import io.github.vzwingma.finances.budget.serverless.services.parametrages.business.ParametragesService;
 import io.github.vzwingma.finances.budget.serverless.services.parametrages.business.ports.IParametrageAppProvider;
 import io.github.vzwingma.finances.budget.serverless.services.parametrages.business.ports.IParametragesRepository;
+import io.github.vzwingma.finances.budget.services.communs.business.ports.IJwtSigningKeyWriteRepository;
 import io.github.vzwingma.finances.budget.services.communs.data.model.CategorieOperations;
 import io.quarkus.test.junit.QuarkusTest;
 import io.smallrye.mutiny.Multi;
@@ -25,7 +26,8 @@ class ParametragesServiceTest {
     @BeforeEach
     public void setup() {
         parametrageServiceProvider = Mockito.mock(IParametragesRepository.class);
-        parametrageAppProvider = Mockito.spy(new ParametragesService(parametrageServiceProvider));
+        IJwtSigningKeyWriteRepository signingKeyRepository = Mockito.mock(IJwtSigningKeyWriteRepository.class);
+        parametrageAppProvider = Mockito.spy(new ParametragesService(parametrageServiceProvider, signingKeyRepository));
 
         Mockito.when(parametrageServiceProvider.chargeCategories()).thenReturn(Multi.createFrom().items(MockDataCategoriesOperations.getListeTestCategories().stream()));
     }
@@ -39,7 +41,7 @@ class ParametragesServiceTest {
         assertEquals(1, listeCat.size());
         // 1 seul appel à la BDD
         Mockito.verify(parametrageServiceProvider, Mockito.times(1)).chargeCategories();
-        assertEquals(1, listeCat.get(0).getListeSSCategories().size());
+        assertEquals(1, listeCat.getFirst().getListeSSCategories().size());
     }
 
 
